fix: use balance text wrap instead of non breaking space to allow wrap on very small screens

--- a/style.css
+++ b/style.css
@@ -196,6 +196,10 @@ footer img {
   );
 }
 
+.page-heading {
+  text-wrap: balance;
+}
+
 .img-block {
   margin-top: -260px;
   padding-bottom: 40px;
